[gd_scene load_steps=4 format=3 uid="uid://ba0acdrled3bk"]

[ext_resource type="Theme" uid="uid://bvudsuymnp2kj" path="res://core/resources/theme/asteroid_theme.tres" id="1_6f0r5"]
[ext_resource type="PackedScene" uid="uid://dmuk0fyhkw4xd" path="res://_reusable/ui_scenes/button_with_sound.tscn" id="1_vfd0s"]
[ext_resource type="Script" uid="uid://kteosdrpcfvh" path="res://core/UI/scripts/pause_menu.gd" id="2_mhqdc"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6f0r5")
script = ExtResource("2_mhqdc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"

[node name="continue" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_vfd0s")]
layout_mode = 2
text = "Continue"
flat = true

[node name="back_to_menu" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_vfd0s")]
layout_mode = 2
text = "Back to Menu"
flat = true

[connection signal="button_clicked" from="MarginContainer/VBoxContainer/continue" to="." method="_on_continue_button_clicked"]
[connection signal="button_clicked" from="MarginContainer/VBoxContainer/back_to_menu" to="." method="_on_back_to_menu_button_clicked"]
